--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "class-variance-authority": "^0.7.1",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.3",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
